# ampamp

./: .gitignore  1_Grover's_Search_Algorithm.py  2_Fixed_Point_Ammplitude_Amplification.py  3.5_Fixed_Point_Oblivious_Amplitude_Amplification.py  3_Oblivious_Ampltude_Amplification.py  404.html  4_Distributed _Quantum_Amplitude_Amplification.py  5_Quantum_Singular_Variable_Transformation.py  5_Variable_Time_Amplitude_Amplification.py  6_Quantum_Singular_Variable_Transformation.py  CITATION.cff  FAA.py  Grover's_Search_Algorithm.py  LICENSE  README.md  ROBUSTNESS_TEST_REPORT.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  test_ampamp.py
Transpile Algorithms GPU Parallelization/: 5_Variable_Time_Amplitude_Amplification_transpile_gpu.py  transpile_path_utils_gpu.py
docs/: index.md
experiments/: 1_Grover's_Search_Algorithm.py  2_Fixed_Point_Ammplitude_Amplification.py  3.25_Controlled_Quantum_Amplification.py  3.5_FOAA.py  3.5_Fixed_Point_Oblivious_Amplitude_Amplification.py  3_Oblivious_Ampltude_Amplification.py  4_Distributed _Quantum_Amplitude_Amplification.py  5_Variable_Time_Amplitude_Amplification.py  6_Quantum_Singular_Variable_Transformation.py
project_split/: README.md
search/: search_index.json
site/: 404.html  index.html  objects.inv
stylesheets/: custom.css
tests/: test_core_engines.py  test_diagnostics.py  test_entanglement.py  test_oracles.py  test_public_api.py  test_transpilation_module.py  test_transpiler.py
transpilation/: 1.1_QAOA_Grover_Laboratory.py  2_Fixed_Point_Ammplitude_Amplification.py  3.5_FOAA.py  (+10 more)
(+168 files in other folders)
