[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ampamp"
version = "0.1.0"
authors = [{name = "Varun Daiya"}, {name = "Yusuf Tahir"}]
description = "A unified framework for Quantum Amplitude Amplification, QSVT, and VTAA."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "sympy>=1.12",
    "matplotlib>=3.7",
    "qiskit>=1.0",
    "qiskit-aer>=0.14"
]

[tool.setuptools.packages.find]
where = ["src"]